# embedding_kb_advanced

./: .env.example  .gitignore  README.md  context_embedding_methods.ipynb  pyproject.toml
embedding_kb/: embedder.py  run.py  schemas.py
embedding_kb/configs/: deployment.json  llm_configs.json
embedding_kb_advanced/: embedder.py  run.py  schemas.py
embedding_kb_advanced/configs/: deployment.json  llm_configs.json
test_embedding_kb/: run copy.py  run.py  schemas.py
test_embedding_kb/configs/: kb_deployments.json
