[tool.poetry]
name = "embedding_kb"
version = "0.1.0"
description = "Embedding Knowledge Base"
authors = ["Mohamed Arshath <marshath@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
naptha-sdk = {git = "https://github.com/NapthaAI/naptha-sdk.git", branch = "feat/unified-storage-api"}
pydantic = "^2.9.2"
tqdm = "^4.67.1"
pypdf2 = "^3.0.1"
psycopg2-binary = "^2.9.10"
openai = "^1.58.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"